changes in blue man - version fixed cap - alignment changes

--- a/src/front/components/css/style.css
+++ b/src/front/components/css/style.css
@@ -100,7 +100,7 @@
 }
 
 .redLargerText {
-  font-size: larger;
+  font-size: xx-large;
   color: red;
 }
 
